@@ -110,18 +110,16 @@ typedef struct ILinfo
 } ILinfo;
 
 
-typedef struct ILpointf
-{
-	ILfloat x, y;
+typedef struct ILpointf {
+	ILfloat x;
+	ILfloat y;
 } ILpointf;
 
-typedef struct ILpointi
-{
-	ILint x, y;
+typedef struct ILpointi {
+	ILint x;
+	ILint y;
 } ILpointi;
 
-
-// ImageLib Utility Functions
 ILAPI ILboolean      ILAPIENTRY iluAlienify(ILvoid);
 ILAPI ILboolean      ILAPIENTRY iluBlurAvg(ILuint Iter);
 ILAPI ILboolean      ILAPIENTRY iluBlurGaussian(ILuint Iter);
@@ -130,7 +128,7 @@ ILAPI ILuint         ILAPIENTRY iluColoursUsed(ILvoid);
 ILAPI ILboolean      ILAPIENTRY iluCompareImage(ILuint Comp);
 ILAPI ILboolean      ILAPIENTRY iluContrast(ILfloat Contrast);
 ILAPI ILboolean      ILAPIENTRY iluCrop(ILuint XOff, ILuint YOff, ILuint ZOff, ILuint Width, ILuint Height, ILuint Depth);
-ILAPI ILvoid         ILAPIENTRY iluDeleteImage(ILuint Id);
+DEPRECATED(ILAPI ILvoid         ILAPIENTRY iluDeleteImage(ILuint Id));
 ILAPI ILboolean      ILAPIENTRY iluEdgeDetectE(ILvoid);
 ILAPI ILboolean      ILAPIENTRY iluEdgeDetectP(ILvoid);
 ILAPI ILboolean      ILAPIENTRY iluEdgeDetectS(ILvoid);
@@ -142,7 +140,7 @@ ILAPI ILstring 		 ILAPIENTRY iluErrorString(ILenum Error);
 ILAPI ILboolean      ILAPIENTRY iluConvolution(ILint *matrix, ILint scale, ILint bias);
 ILAPI ILboolean      ILAPIENTRY iluFlipImage(ILvoid);
 ILAPI ILboolean      ILAPIENTRY iluGammaCorrect(ILfloat Gamma);
-ILAPI ILuint         ILAPIENTRY iluGenImage(ILvoid);
+DEPRECATED(ILAPI ILuint         ILAPIENTRY iluGenImage(ILvoid));
 ILAPI ILvoid         ILAPIENTRY iluGetImageInfo(ILinfo *Info);
 ILAPI ILint          ILAPIENTRY iluGetInteger(ILenum Mode);
 ILAPI ILvoid         ILAPIENTRY iluGetIntegerv(ILenum Mode, ILint *Param);
